adds noindex tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,6 +53,7 @@ fontSpecSets.forEach((pair) => {
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="robots" content="noindex">
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
